<resources>
    <string name="app_name">TuTinder</string>
    <string name="tab_tutinder">Tutinder</string>
    <string name="tab_my_courses">My Courses</string>
    <string name="tab_my_groups">My Groups</string>
    <string name="cptn_personalinfo">Personal Info</string>
    <string name="cptn_password">Password</string>
    <string name="cptn_university">University</string>
    <string name="cptn_tags">Describe yourself</string>
    <string name="cptn_aboutme">About me</string>
    <string name="title_register">Register</string>
    <string name="title_editaccount">Edit Account</string>
    <string name="title_mycourses">My Courses</string>
    <string name="title_courseoverview">Course Overview</string>
    <string name="title_myfriends">My Friends</string>
    <string name="title_search">Search</string>
    <string name="title_matchoverview">Match Overview</string>
    <string name="title_group">GroupActivity</string>
    <string name="title_mygroups">My Groups</string>
    <string name="title_group_chat">Group Chat</string>
    <string name="title_open_group_requests">Open Group Requests</string>
    <string name="action_edit_account">Edit Account</string>
    <string name="action_register">Send Data</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="action_save">Save</string>
    <string name="action_popup">Popup</string>
    <string name="action_remove_friend">Remove Friend</string>
    <string name="action_undo">UNDO</string>
    <string name="action_filter">Filter</string>
    <string name="action_leave_group">Leave Group</string>
    <string name="action_go_to_admin">Go Admin</string>
    <string name="action_group_request">grouprequest</string>
    <string name="action_new_course">New Course</string>
    <string name="action_search_for_partners">Search for Partners</string>
    <string name="action_leave_course">Leave Course</string>
    <string name="action_send_messages">Send Messages</string>
    <string name="action_show_group">Show Group</string>
    <string name="action_show_course">Show Course</string>
    <string name="action_show_profile">Show Profile</string>
    <string name="action_send_group_request">Send Group Request</string>
    <string name="action_enroll_in_course">Enroll in Course</string>
    <string name="action_timeslot_settings">Timeslot Settings</string>
    <string name="action_select_photo">Select from Gallery</string>
    <string name="action_take_photo">Take a Photo</string>
    <string name="action_set_profilepicture">Set as Profilepicture</string>
    <string name="action_remove_picture">Remove Picture</string>
    <string name="action_accept">Accept</string>
    <string name="action_deny">Deny</string>
    <string name="hint_matriculationnumber">Matriculation Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_tag">Tag</string>
    <string name="hint_studycourse">Studycourse</string>
    <string name="hint_description">Tell others something about you</string>
    <string name="hint_description_profile">Me, Myself</string>
    <string name="hint_courses">My courses</string>
    <string name="hint_personalitytags">Describe yourself in four tags!</string>
    <string name="hint_password_repeat">Repeat password</string>
    <string name="hint_newpassword">New password</string>
    <string name="hint_newpassword_repeat">Repeat new password</string>
    <string name="hint_oldpassword">Old password</string>
    <string name="hint_faculty">Faculty</string>
    <string name="hint_lecturer">Lecturer</string>
    <string name="hint_interest_tag_search">Which courses are you interested in?</string>
    <string name="hint_qr_code">Other users can scan this qr code to add you as a friend</string>
    <string name="hint_no_details">The user has no further details given</string>
    <string name="hint_search">Coursename</string>
    <string name="hint_no_description">No Description available</string>
    <string name="hint_no_phone">No Phone available</string>
    <string name="hint_filter_tags">Degree of matches tag:</string>
    <string name="hint_filter">Filter options:</string>
    <string name="hint_filter_timeslots">Equal timeslots</string>
    <string name="hint_filter_users">Show users</string>
    <string name="hint_filter_groups">Show Groups</string>
    <string name="hint_term">Term</string>
    <string name="hint_to">To</string>
    <string name="hint_from">From</string>
    <string name="hint_no_lecturer">Lecturer not specified</string>
    <string name="hint_friends">Friends in course</string>
    <string name="hint_no_institute">Institute not specified</string>
    <string name="hint_institute">Institute</string>
    <string name="hint_no_coursename">Coursename not specified</string>
    <string name="hint_coursename">Coursename</string>
    <string name="hint_enrolled_users">Enrolled Users</string>
    <string name="hint_groups">Groups</string>
    <string name="hint_no_term">Term not specified</string>
    <string name="hint_no_friends_in_course">None of your friends are in this course</string>
    <string name="hint_max_group_size">| Max. group size:</string>
    <string name="hint_no_attended_courses">No attended courses</string>
    <string name="hint_attended_courses">Attended Courses</string>
    <string name="hint_group_members">Group Members</string>
    <string name="hint_group_size">Group Size</string>
    <string name="hint_latest_messages">Latest Messages</string>
    <string name="hint_no_messages">No Messages available</string>
    <string name="hint_write_message">Write a Message ...</string>
    <string name="hint_preferred_timeslots">Preferred Timeslots</string>
    <string name="hint_no_preferred_timeslots">No preferred Timeslots</string>
    <string name="toast_undo_rating">You disliked a user.</string>
    <string name="toast_filtersettingsavedsucess">Filter changes saved successfully</string>
    <string name="toast_filtersettingsresettedsuccess">Filter settings resetted successfully</string>
    <string name="toast_group_request_succeded">Group request succeded</string>
    <string name="toast_message_copy">Message has been copied to the clipboard</string>
    <string name="toast_group_request_denied">Group request successfully denied</string>
    <string name="toast_leave_group_succes">Leaved Group successfully</string>
    <string name="toast_leave_course_succes">Leaved Course successfully</string>
    <string name="toast_timeslots_save_succeded">Timeslots save succeded</string>
    <string name="error_invalid_credentials">Your credentials are invalid!</string>
    <string name="error_invalid_password_length">Your password must contain at least 8 characters!</string>
    <string name="error_invalid_matriculationnr">Your matriculation-number is invalid!</string>
    <string name="error_registration">Error while trying to register, check information!</string>
    <string name="error_passwords_not_equal">Passwords must be equal</string>
    <string name="error_password_not_valid">Passwords are not valid, check or provide at least 8 digits!</string>
    <string name="error_already_registered">Matrikulationnumber is already registered!</string>
    <string name="error_namelength">Your name must contain at least 3 characters.</string>
    <string name="error_namenumber">Your name can not contain numbers.</string>
    <string name="error_email">Your email address is invalid.</string>
    <string name="error_studycoursenumber">Your studycourse can not contain numbers.</string>
    <string name="error_matrikelnr">Your matriculation number can only contain numbers.</string>
    <string name="error_passwordlength">Your password must contain at least 8 characters.</string>
    <string name="error_passwordmatch">Your passwords must be identical.</string>
    <string name="error_passwordoldinvalid">Your current password is invalid.</string>
    <string name="error_notalltagsselected">You did not select all tags, please select one tag of each column.</string>
    <string name="error_deleting_picture">Error! Image could not be deleted!</string>
    <string name="error_sending_group_request">Group request failed</string>
    <string name="error_sending_message">Sending Message failed</string>
    <string name="error_rating_error">Error while sending request... We restore your rated user(s).</string>
    <string name="error_sending_group_accept_request">Error while accepting group request</string>
    <string name="error_loading_group_requests">Error while loading group requests</string>
    <string name="error_sending_group_deny_request">Error while denying group request</string>
    <string name="error_loading_course_list">Error while loading courses</string>
    <string name="error_sending_search_request">Error while sending Search Request</string>
    <string name="error_sending_leave_group_request">Error while sending leave Group Request</string>
    <string name="error_sending_request">Error while sending request (no Connection)</string>
    <string name="error_reading_qr_code">An error occurred while reading the QR code. Please try again.</string>
    <string name="error_generating_qr_code">An error occurred while generating the QR code. Please try again.</string>
    <string name="error_permissions_denied">Action could not be performed, because you denied necessary permissions.</string>
    <string name="error_loading_user">Error while loading User</string>
    <string name="error_user_already_in_group_formatted">%1$s already is in a Group in %2$s</string>
    <string name="error_user_already_in_group">User already is in a Group</string>
    <string name="error_loading_course">Error while loading Course</string>
    <string name="error_loading_users">Error while loading Users</string>
    <string name="error_to_much_profilepictures">You already have 5 Profilpicutres</string>
    <string name="error_processing_picture">Error, while processing Picture</string>
    <string name="error_loading_matches">Error while loading Matches</string>
    <string name="error_invalid_email">Your Email is Invalid</string>
    <string name="error_invalid_name">Your Name is invalid</string>
    <string name="error_invalid_studycourse">Your Studycourse is invalid</string>
    <string name="error_not_all_tags_selected">You must select one option for all Tags</string>
    <string name="error_invalid_inputs">One of your Inputs was invalid...</string>
    <string name="error_invalid_searchkey_word">Your keyword must contain at least 3 characters.</string>
    <string name="error_loading_tags">Error while loading Personality Tags</string>
    <string name="error_group_already_full">User already is in a full Group</string>
    <string name="dialog_title_logout">Logout</string>
    <string name="dialog_message_logout">Are you sure you want to log out?</string>
    <string name="dialog_title_enroll">Enroll</string>
    <string name="dialog_message_enroll">Do you want to enroll in this Course?</string>
    <string name="dialog_message_enrolling">Enrolling in Course...</string>
    <string name="dialog_title_leave">Leave Course</string>
    <string name="dialog_message_leave">Do you want to leave this Course?</string>
    <string name="dialog_message_leaving">Leaving this course...</string>
    <string name="dialog_message_loading">Loading...</string>
    <string name="dialog_title_setprofilepicture">Set Profilepicture</string>
    <string name="dialog_message_setprofilepicture">Do you want to set this Picture as your main Profilepicture?</string>
    <string name="description">Description</string>
    <string name="hint_maxgroupsize">Maximal Groupsize</string>
    <string name="hint_description_course">Coursedescription</string>
</resources>