<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="@dimen/card_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_coursename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_coursename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:paddingRight="4dp"
                    android:src="@drawable/ic_tutinder_24dp" />

                <TextView
                    android:id="@+id/tv_hint_coursename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv_coursename"
                    android:text="@string/hint_coursename"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_coursename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/hint_no_coursename"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_term"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:paddingRight="4dp"
                    android:src="@drawable/ic_access_time_accent_24dp" />

                <TextView
                    android:id="@+id/tv_hint_term"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv_term"
                    android:text="@string/hint_term"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/hint_no_term"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:paddingRight="4dp"
                    android:src="@drawable/ic_edit_accent_24dp" />

                <TextView
                    android:id="@+id/tv_hint_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv_description"
                    android:text="@string/description"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/hint_no_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_institute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_institute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="4dp"
                    android:src="@drawable/ic_school_accent_24dp" />

                <TextView
                    android:id="@+id/tv_hint_institute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv_institute"
                    android:text="@string/hint_institute"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_institute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_toEndOf="@+id/iv_institute"
                android:text="@string/hint_no_institute"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_lecturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_lecturer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="4dp"
                    android:src="@drawable/ic_person_accent_24dp" />

                <TextView
                    android:id="@+id/tv_hint_lecturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv_lecturer"
                    android:text="@string/hint_lecturer"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_lecturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_toEndOf="@+id/iv_lecturer"
                android:text="@string/hint_no_lecturer"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_users"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="4dp"
                    android:src="@drawable/ic_people_accent_24dp" />

                <TextView
                    android:id="@+id/tv_hint_users"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv_users"
                    android:text="@string/hint_enrolled_users"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_toEndOf="@+id/iv_users"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_groups"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="4dp"
                    android:src="@drawable/ic_people_accent_24dp" />

                <TextView
                    android:id="@+id/tv_hint_groups"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv_groups"
                    android:text="@string/hint_groups"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_groups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_toEndOf="@+id/iv_groups"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textPrimary" />

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>

